syntax = "proto3";

option go_package = "grpcclient/credentialsfetcher";
package credentialsfetcher;

service CredentialsFetcherService {
rpc AddKerberosLease (CreateKerberosLeaseRequest) returns (CreateKerberosLeaseResponse);
rpc DeleteKerberosLease (DeleteKerberosLeaseRequest) returns (DeleteKerberosLeaseResponse);
}

message CreateKerberosLeaseRequest {
repeated string credspec_contents = 1;
}

message CreateKerberosLeaseResponse {
string lease_id = 1;
repeated string created_kerberos_file_paths = 2;
}

message DeleteKerberosLeaseRequest {
string lease_id = 1;
}

message DeleteKerberosLeaseResponse {
string lease_id = 1;
repeated string deleted_kerberos_file_paths = 2;
}
